--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                 <div class="presentacion mb-4">
                     <!-- Texto de presentación e iconos de redes sociales-->
                     <div class="presentacionInfo stretchRight">
-                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Data Engineer</h1>
+                        <h1 class="tituloPrincipal">¡Hola soy Nahuel! <br>Ingeniero de Datos</h1>
                         <p class="presentacionInfoPrincipal lead">
-                            Actualmente trabajo como Ingeniero de Datos en NTT Data. 
-                            <br>
-                            Soy Ingeniero en Sistemas Computacionales especializado en ingeniería de datos, puedo desenvolverme en trabajos de GenAI y tengo experiencia en machine learning.
+                            Soy Ingeniero en Sistemas Computacionales especializado en Ingeniería de Datos, puedo desenvolverme en trabajos de GenAI y tengo experiencia en machine learning.
+                            <br> 
+                            Actualmente trabajo como Ingeniero de Datos en NTT Data.
                             <br>
                             En mis tiempos libres, dedico una parte importante de mi tiempo a aprender nuevas tecnologías y a profundizar y practicar aquellas que ya conozco, con el objetivo de seguir fortaleciendo mi perfil como Data Engineer. 
                         </p>
@@ -123,10 +123,10 @@
                 <div class="mb-3">
                     <h3 class="subtitulo mb-1">Data Engineer en NTT Data<h3>
                     <p class="subtitulo fs-4 lead mt-0 mb-2">2023 - actualmente</p>
-                    <p class="resumen lead">Consumo de APIs y conexiones a distintos contenedores de almacenamiento, para desarrollo de procesos ETL/ELT con Python, Spark y Apache NiFi.</p>
-                    <p class="resumen lead">Uso de Hive para creación de tablas y consultas, combinado con Apache Iceberg.</p>
-                    <p class="resumen lead">Modelado de Datos con Apache Spark.</p>
-                    <p class="resumen lead">Refactorización de soluciones en Python a Spark.</p>
+                    <p class="resumen lead">Consumo de APIs y conexiones a distintos contenedores de almacenamiento y servidores, para desarrollo de procesos ETL/ELT con Python, Apache Spark y Apache NiFi.</p>
+                    <p class="resumen lead">Modelado y transformación de Datos con Apache Spark.</p>
+                    <p class="resumen lead">Uso de Hive y Apache Iceberg para creación de bases de datos, tablas y consultas.</p>
+                    <p class="resumen lead">Refactorización de soluciones en Python a Apache Spark.</p>
                     <p class="resumen lead">Desarrollos en notebooks de Microsoft Synapse Analytics y consultas SQL.</p>
                     <p class="resumen lead">Trabajo con metodología AGILE.</p>
                     <p class="resumen lead">Trabajo colaborativo con Git y GitHub.</p>
@@ -159,48 +159,21 @@
         <section>
             <h2 id="skills" class="titulo fs-1">Skills</h2>
             <div class="container">
-                <h3 class="subtitulo">Technical skills</h3>
-                <h3 class="subtitulo fs-4 lead">Tools:</h3>
+                <!-- <h3 class="subtitulo">Technical skills</h3> -->
                 <div class="cajaSkills mb-3">
                     <div class="m-2">
-                        <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
-                        <img src="img/skills/technical-skills/git.svg" class="iconoSkill" alt="logo de Git">
-                        <p class="nombreIcono lead">Git</p>
-                    </div>    
+                        <img src="img/skills/technical-skills/Azure.svg" class="iconoSkill" alt="logo de Azure">
+                        <p class="nombreIcono lead">Azure</p>
+                    </div>
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/github.svg" class="iconoSkill" alt="logo de GitHub">
-                        <p class="nombreIcono lead">GitHub</p>
-                    </div>  
+                        <img src="img/skills/technical-skills/AWS.svg" class="iconoSkill" alt="logo de AWS">
+                        <p class="nombreIcono lead">AWS</p>
+                    </div>
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/markdown.svg" class="iconoSkill" alt="logo de Markdown">
-                        <p class="nombreIcono lead">Markdown</p>
-                    </div>    
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/docker-original.svg" class="iconoSkill" alt="logo de Docker">
-                        <p class="nombreIcono lead">Docker</p>
-                    </div>    
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/linux-original.svg" class="iconoSkill" alt="logo de Linux">
-                        <p class="nombreIcono lead">Linux</p>
-                    </div>  
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/vscode.svg" class="iconoSkill" alt="logo de Visual Studio Code">
-                        <p class="nombreIcono lead">Visual Studio Code</p>
-                    </div>    
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/google-colab-96.svg" class="iconoSkill" alt="logo de Google Colaboratory">
-                        <p class="nombreIcono lead">Colab</p>
-                    </div>  
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/jupyter.svg" class="iconoSkill" alt="logo de Jupyter">
-                        <p class="nombreIcono lead">Jupyter</p>
-                    </div>    
-                    <!-- <div class="m-2">
-                        <img src="img/skills/technical-skills/anaconda.svg" class="iconoSkill" alt="logo de Anaconda">
-                        <p class="nombreIcono lead">Anaconda</p>
-                    </div>     -->
+                        <img src="img/skills/technical-skills/Databricks-1.svg" class="iconoSkill" alt="logo de Databricks">
+                        <p class="nombreIcono lead">Databricks</p>
+                    </div>
                 </div>
-                <h3 class="subtitulo fs-4 lead">Data Engineering:</h3>
                 <div class="cajaSkills mb-3">
                     <div class="m-2">
                         <img src="img/skills/technical-skills/python.svg" class="iconoSkill" alt="logo de Python">
@@ -210,14 +183,6 @@
                         <img src="img/skills/technical-skills/apache_spark-ar21.svg" class="iconoSkill" alt="logo de Spark">
                         <p class="nombreIcono lead">Apache Spark</p>
                     </div>
-                    <!-- <div class="m-2">
-                        <img src="img/skills/technical-skills/apache_spark-icon.svg" class="iconoSkill" alt="logo de Spark">
-                        <p class="nombreIcono lead">PySpark</p>
-                    </div>
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/apache_spark-icon.svg" class="iconoSkill" alt="logo de Spark">
-                        <p class="nombreIcono lead">Spark SQL</p>
-                    </div> -->
                     <div class="m-2">
                         <img src="img/skills/technical-skills/Apache Airflow.svg" class="iconoSkill" alt="logo de Apache Airflow">
                         <p class="nombreIcono lead">Apache Airflow</p>
@@ -235,30 +200,6 @@
                         <p class="nombreIcono lead">Apache Iceberg</p>
                     </div>
                 </div>
-                <h3 class="subtitulo fs-4 lead">Data Science & Machine Learning:</h3>
-                <div class="cajaSkills mb-3">
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/python.svg" class="iconoSkill" alt="logo de Python">
-                        <p class="nombreIcono lead">Python</p>
-                    </div>
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/numpy-original.svg" class="iconoSkill" alt="logo de Numpy">
-                        <p class="nombreIcono lead">Numpy</p>
-                    </div>        
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/pandas-original.svg" class="iconoSkill" alt="logo de Pandas">
-                        <p class="nombreIcono lead">Pandas</p>
-                    </div>        
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/scikit-learn.svg" class="iconoSkill" alt="logo de Scikit-Learn">
-                        <p class="nombreIcono lead">Scikit-Learn</p>
-                    </div>        
-                    <!-- <div class="m-2">
-                        <img src="img/skills/technical-skills/power-bi.svg" class="iconoSkill" alt="logo de Power BI">
-                        <p class="nombreIcono lead">Power BI</p>
-                    </div> -->
-                </div>
-                <h3 class="subtitulo fs-4 lead">Databases:</h3>
                 <div class="cajaSkills mb-3">
                     <div class="m-2">
                         <img src="img/skills/technical-skills/mysql.svg" class="iconoSkill" alt="logo de MySQL">
@@ -275,41 +216,63 @@
                     <div class="m-2">
                         <img src="img/skills/technical-skills/mongodb.png" class="iconoSkill" alt="logo de MongoDB">
                         <p class="nombreIcono lead">MongoDB</p>
-                    </div>    
+                    </div>
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/numpy-original.svg" class="iconoSkill" alt="logo de Numpy">
+                        <p class="nombreIcono lead">Numpy</p>
+                    </div>        
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/pandas-original.svg" class="iconoSkill" alt="logo de Pandas">
+                        <p class="nombreIcono lead">Pandas</p>
+                    </div>        
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/scikit-learn.svg" class="iconoSkill" alt="logo de Scikit-Learn">
+                        <p class="nombreIcono lead">Scikit-Learn</p>
+                    </div>   
                 </div>
-                <h3 class="subtitulo fs-4 lead">Backend:</h3>
                 <div class="cajaSkills mb-3">
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/python.svg" class="iconoSkill" alt="logo de Python">
-                        <p class="nombreIcono lead">Python</p>
-                    </div>        
+                        <img src="img/skills/technical-skills/docker-original.svg" class="iconoSkill" alt="logo de Docker">
+                        <p class="nombreIcono lead">Docker</p>
+                    </div>    
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/linux-original.svg" class="iconoSkill" alt="logo de Linux">
+                        <p class="nombreIcono lead">Linux</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/git.svg" class="iconoSkill" alt="logo de Git">
+                        <p class="nombreIcono lead">Git</p>
+                    </div>    
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/github.svg" class="iconoSkill" alt="logo de GitHub">
+                        <p class="nombreIcono lead">GitHub</p>
+                    </div>      
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/markdown.svg" class="iconoSkill" alt="logo de Markdown">
+                        <p class="nombreIcono lead">Markdown</p>
+                    </div>   
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/vscode.svg" class="iconoSkill" alt="logo de Visual Studio Code">
+                        <p class="nombreIcono lead">Visual Studio Code</p>
+                    </div>    
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/google-colab-96.svg" class="iconoSkill" alt="logo de Google Colaboratory">
+                        <p class="nombreIcono lead">Colab</p>
+                    </div>  
                     <!-- <div class="m-2">
-                        <img src="img/skills/technical-skills/django-plain.svg" class="iconoSkill" alt="logo de Django">
-                        <p class="nombreIcono lead">Django</p>
-                    </div> -->
+                        <img src="img/skills/technical-skills/jupyter.svg" class="iconoSkill" alt="logo de Jupyter">
+                        <p class="nombreIcono lead">Jupyter</p>
+                    </div>     -->
+                </div>
+                <div class="cajaSkills mb-3">        
                     <div class="m-2">
                         <img src="img/skills/technical-skills/fastapi-original.svg" class="iconoSkill" alt="logo de FastAPI">
                         <p class="nombreIcono lead">FastAPI</p>
                     </div>        
-                    <div class="m-2">
+                    <!-- <div class="m-2">
                         <img src="img/skills/technical-skills/flask-original.svg" class="iconoSkill" alt="logo de Flask">
                         <p class="nombreIcono lead">Flask</p>
-                    </div>
-                    <!-- <div class="m-2">
-                        <img src="img/skills/technical-skills/nodejs.svg" class="iconoSkill" alt="logo de Node.js">
-                        <p class="nombreIcono lead">Node.js</p>
-                    </div>
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/npm.svg" class="iconoSkill" alt="logo de npm">
-                        <p class="nombreIcono lead">npm</p>
-                    </div>    
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/express.svg" class="iconoSkill" alt="logo de Express">
-                        <p class="nombreIcono lead">Express</p>
-                    </div>         -->
-                </div>
-                <h3 class="subtitulo fs-4 lead">Front-end:</h3>
-                <div class="cajaSkills mb-3">
+                    </div> -->
                     <div class="m-2">
                         <img src="img/skills/technical-skills/html5-original-wordmark.svg" class="iconoSkill" alt="logo de HTML5">
                         <p class="nombreIcono lead">HTML5</p>
@@ -325,17 +288,17 @@
                     <div class="m-2">
                         <img src="img/skills/technical-skills/javascript.svg" class="iconoSkill" alt="logo de JavaScript">
                         <p class="nombreIcono lead">JavaScript</p>
-                    </div>    
+                    </div>
                     <!-- <div class="m-2">
-                        <img src="img/skills/technical-skills/typescript.svg" class="iconoSkill" alt="logo de TypeScript">
-                        <p class="nombreIcono lead">TypeScript</p>
-                    </div>    
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/react.svg" class="iconoSkill" alt="logo de React">
-                        <p class="nombreIcono lead">React</p>
+                        <img src="img/skills/technical-skills/power-bi.svg" class="iconoSkill" alt="logo de Power BI">
+                        <p class="nombreIcono lead">Power BI</p>
+                    </div> -->
+                    <!-- <div class="m-2">
+                        <img src="img/skills/technical-skills/django-plain.svg" class="iconoSkill" alt="logo de Django">
+                        <p class="nombreIcono lead">Django</p>
                     </div> -->
                 </div>    
-                <h3 class="subtitulo">Soft skills</h3>
+                <!-- <h3 class="subtitulo">Soft skills</h3>
                 <div class="cajaSkills">
                     <div class="m-2">
                         <img src="img/skills/soft-skills/resiliencia.png" class="iconoSkill" alt="resiliencia, mente positiva">
@@ -401,7 +364,7 @@
                         <p class="nombreIcono lead m-0">Trabajo</p>
                         <p class="nombreIcono lead m-0">en equipo</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- Fin de la sección de skills -->
